fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body,
     flex-direction: column;
     font-family: "Poppins", sans-serif;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .App {
